<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- our app background image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
    android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <!-- Email -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="390dp"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <!-- Password -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="390dp"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:autofillHints="" />

            <!-- Login -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="16dp"
                />

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#313036"
                android:layout_marginTop="16dp"
                />

            <!-- progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>