<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- our app background image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <!-- Name -->
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:hint="@string/name"

                android:autofillHints=""
                android:inputType="" />

            <!-- Email -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:autofillHints="" />

            <!-- Password -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:autofillHints="" />

            <!-- ConfirmPassword -->
            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:autofillHints="" />

            <!-- Phone number -->
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_marginTop="8dp"
                android:autofillHints="" />

            <!-- Create Account -->
            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginTop="16dp" />

            <!-- progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="16dp"/>

            <!-- already have account, login -->
            <TextView
                android:id="@+id/textGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/already_have_account_login"
                android:textColor="#2B2B2B"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
